ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kindergarten-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: a28247be00a9a480db7f23ae0f3c514c-1601016564.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
